# hcm-calculator

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run_app.bat  run_app.ps1  setup_app.bat  setup_app.ps1
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  CLEANUP_PATCH_NOTE.md  METHODOLOGY.md  PRD.md  UI_REQUIREMENTS.md  basic_freeway_implementation_plan.md  ch15_calculator_coverage_status.md  ch15_single_segment_gap_analysis.md  ch15_vertical_class_methodology_map.md  ch15_vertical_data_ingestion_guidelines.md  ch15_vertical_fixture_inventory.md  multilane_highway_implementation_plan.md  roadmap.md  supported_workflows.md  user_quick_start.md
docs/localization/: app_localization_audit.md  engineering_terminology_glossary.md  localization_acceptance_matrix.md  localization_architecture.md
docs/methodology/: basic_freeway_method_gap_analysis.md  basic_freeway_phase_9_audit.md  generalization_audit.md  merge_diverge_hcm_7_0_methodology_map.md  merge_diverge_hcm_7_1_audit.md  merge_diverge_phase_2_engine_qualification.md  merge_diverge_phase_3_release_qualification.md  merge_diverge_risk_and_discrepancy_register.md  merge_diverge_support_contract.md  method_completion_acceptance_matrix.md  multilane_method_gap_analysis.md  (+13 more)
references/: VALIDATION_MATRIX.md  example_inputs.yaml  expected_outputs.yaml  freeway_example_inputs.yaml  freeway_expected_outputs.yaml  merge_diverge_example_inputs.yaml  multilane_example_inputs.yaml  multilane_expected_outputs.yaml  vertical_fixture_template.yaml  weaving_example_inputs.yaml
src/hcmcalc/: cli.py  (+2 more)
tests/: __init__.py
(+154 files in other folders)
