[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hcm-calculator"
version = "0.5.0"
description = "Auditable Highway Capacity Manual calculator scaffold"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "bokoboss" }
]
dependencies = [
  "openpyxl>=3.1",
  "pydantic>=2.7",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2"
]
ui = [
  "streamlit>=1.59"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/hcmcalc"]
